test/reckon_typed_list_test.test
=== PURELIST EXPRESSION: line ##:
{|x + 5 * y|}
  ^
    {|x|}
=== PURELIST EXPRESSION: line ##:
{|x + 5 * y|}
      ^
    {|5|}
=== PURELIST EXPRESSION: line ##:
{|x + 5 * y|}
          ^
    {|y|}
=== PURELIST EXPRESSION: line ##:
{|x + 5 * y|}
      ^^^^^
    {|{|5|} * {|y|}|}
=== PURELIST EXPRESSION: line ##:
{|x + 5 * y|}
^^^^^^^^^^^^^
    {|{|x|} + {|{|5|} * {|y|}|}|}
=== BRACKETED EXPRESSION: line ##:
{|x + 5 * y|}
^^^^^^^^^^^^^
    {|x|} + {|{|5|} * {|y|}|}
=== BRACKETED EXPRESSION: line ##:
{b|A B C|}
^^^^^^^^^^
    {b|A B C|b}
=== BRACKETED EXPRESSION: line ##:
{b|A B C|}
^^^^^^^^^^
    {b|A B C|b}
=== PURELIST EXPRESSION: line ##:
{b|x + 5 * y|b}
   ^
    {|x|}
=== PURELIST EXPRESSION: line ##:
{b|x + 5 * y|b}
       ^
    {|5|}
=== PURELIST EXPRESSION: line ##:
{b|x + 5 * y|b}
           ^
    {|y|}
=== PURELIST EXPRESSION: line ##:
{b|x + 5 * y|b}
       ^^^^^
    {|{|5|} * {|y|}|}
=== BRACKETED EXPRESSION: line ##:
{b|x + 5 * y|b}
^^^^^^^^^^^^^^^
    {b|{|x|} + {|{|5|} * {|y|}|}|b}
=== BRACKETED EXPRESSION: line ##:
{b|x + 5 * y|b}
^^^^^^^^^^^^^^^
    {b|{|x|} + {|{|5|} * {|y|}|}|b}
=== BRACKETED EXPRESSION: line ##:
{p|X + 5 * Y|p}
^^^^^^^^^^^^^^^
    {p|X + 5 * Y|p}
=== BRACKETED EXPRESSION: line ##:
{p|X + 5 * Y|p}
^^^^^^^^^^^^^^^
    {p|X + 5 * Y|p}
ERROR: in line ##: beginning type `' != end type `b'; end type ignored:
{|X Y Z|b}
        ^
=== PURELIST EXPRESSION: line ##:
{|X Y Z|b}
^^^^^^^^^^
    {|X Y Z|}
=== BRACKETED EXPRESSION: line ##:
{|X Y Z|b}
^^^^^^^^^^
    X Y Z
ERROR: in line ##: missing type; "" assumed:
{: i|X Y Z|}
 ^
=== BRACKETED EXPRESSION: line ##:
{: i|X Y Z|}
^^^^^^^^^^^^
    {"": i|X Y Z|}
=== BRACKETED EXPRESSION: line ##:
{: i|X Y Z|}
^^^^^^^^^^^^
    {"": i|X Y Z|}
=== BRACKETED EXPRESSION: line ##:
{"": i|X Y Z|}
^^^^^^^^^^^^^^
    {"": i|X Y Z|}
=== BRACKETED EXPRESSION: line ##:
{"": i|X Y Z|}
^^^^^^^^^^^^^^
    {"": i|X Y Z|}
